# jsk_recognition

clothbag_rim_detector/: CMakeLists.txt  README.md  package.xml  setup.py
clothbag_rim_detector/include/clothbag_rim_detector/: camera.hpp  camera_image_to_point_cloud.hpp  coordinate_transform.hpp  point_cloud_to_cv_mat.hpp
clothbag_rim_detector/include/pcl_msgs/: ModelCoefficients.h  PointIndices.h  PolygonMesh.h  Vertices.h
clothbag_rim_detector/model/: depth_plane_model.npy
clothbag_rim_detector/scripts/: develop.py  get_model.py  hist.py  main.py  param.py  process.py  rim.py  run.sh  target_point.py  test_contour.py  tmp.py
clothbag_rim_detector/scripts/import/: camera.py
clothbag_rim_detector/scripts/model/: get_model.py
clothbag_rim_detector/scripts/sample/: gabor.py
clothbag_rim_detector/src/: camera.cpp  coordinate_transform.cpp
clothbag_rim_detector/src/clothbag_rim_detector/: camera.py  develop.py  draw.py  filter.py  process.py  rim.py  target_point.py  tmp.py  utils.py
jsk_perception/: catkin.cmake
jsk_perception/include/jsk_perception/: og_graph_structure.hpp  opponent_color.hpp  oriented_gradient.hpp  parallel_saliency.hpp
jsk_perception/src/: og_graph_structure.cpp  og_graph_structure_node.cpp  opponent_color.cpp  oriented_gradient.cpp  oriented_gradient_node.cpp  parallel_saliency.cpp  parallel_saliency_node.cpp
